--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,38 @@
-<h1>Dashboards</h1>
-
+<h1>Dashboard</h1>
 <% if current_user.group %>
+
   <%= link_to current_user.group.name, group_path(current_user.group) %>
 <% end %>
 
 
+<div>
+  <%= link_to "Add new product", new_product_path %>
+</div>
+
+<ul>
+  <% current_user.products.each do |product| %>
+    <li>
+      <div>
+        <%= product.name %>
+      </div>
+      <div>
+        <%= product.url %>
+      </div>
+      <div>
+        <%= product.comments %>
+      </div>
+      <div>
+        <%= product.category %>
+      </div>
+      <div>
+        <%= link_to "Edit", edit_product_path(product) %>
+      </div>
+
+      <div>
+        <%= link_to 'Delete', product_path(product),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+      </div>
+    </li>
+  <% end %>
+</ul>
