added functionality for users to leave a group

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,6 +2,10 @@
 
 Invite Code: <%= current_user.group.code %>
 
+<%= link_to 'Leave Group', user_path(current_user.id, user: { group_id: nil }),
+  method: :patch,
+  data: { confirm: "Are you sure?" } %>
+
 <h2>Group Members</h2>
 
 <ul>
