created new and edit forms for groups and generated random invite code

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -4,6 +4,7 @@
   <%= link_to current_user.group.name, group_path(current_user.group) %>
 <% else %>
   <%= link_to "Join Group", edit_user_path(current_user.id) %>
+  <%= link_to "Create Group", new_group_path %>
 <% end %>
 
 
