--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,6 +2,8 @@
 
 Invite Code: <%= current_user.group.code %>
 
+<%= link_to "Edit", edit_group_path(current_user.group_id) %>
+
 <%= link_to 'Leave Group', user_path(current_user.id, user: { group_id: nil }),
   method: :patch,
   data: { confirm: "Are you sure?" } %>
