--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -12,30 +12,4 @@
   <%= link_to "Add new product", new_product_path %>
 </div>
 
-<ul>
-  <% current_user.products.each do |product| %>
-    <li>
-      <div>
-        <%= product.name %>
-      </div>
-      <div>
-        <%= product.url %>
-      </div>
-      <div>
-        <%= product.comments %>
-      </div>
-      <div>
-        <%= product.category %>
-      </div>
-      <div>
-        <%= link_to "Edit", edit_product_path(product) %>
-      </div>
-
-      <div>
-        <%= link_to 'Delete', product_path(product),
-          method: :delete,
-          data: { confirm: "Are you sure?" } %>
-      </div>
-    </li>
-  <% end %>
-</ul>
+<%= render partial: "products/products", locals: { products: current_user.products } %>
