--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,9 +11,9 @@ Invite Code: <%= current_user.group.code %>
 <h2>Group Members</h2>
 
 <ul>
-  <% @group.users.each do |group_user| %>
+  <% @group.users.each do |user| %>
     <li>
-      <%= group_user.first_name + ' ' + group_user.last_name %>
+      <%= link_to user.full_name, user_path(user.id) %>
     </li>
   <% end %>
 </ul>
