--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,27 @@
-<nav>
-  <% if current_user %>
-    <%= link_to "Dashboard", dashboard_path %>
-    <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "Log in", new_user_session_path %>
-    <%= link_to "Signup", new_user_registration_path %>
-  <% end %>
+<nav class="nav <%= current_page?('/') ? '' : 'nav-dark' %>">
+  <div>
+    <%= link_to root_path, class: 'logo-icon' do %>
+      <svg class='logo-icon-home' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'>
+        <path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6' />
+      </svg>
+      <svg class='logo-icon-sparkle' xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'>
+        <path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z' />
+      </svg>
+    <% end %>
+  </div>
 
+  <div>
+    <% if current_user %>
+      <div>
+        <%= link_to 'Dashboard', dashboard_path, class: 'button button-secondary' %>
+        <%= link_to 'Logout', destroy_user_session_path, class: 'button', method: :delete %>
+      </div>
+    <% else %>
+      <div>
+
+        <%= link_to 'Login', new_user_session_path, class: 'button' %>
+        <%= link_to 'Sign up', new_user_registration_path, class: 'button button-primary' %>
+      </div>
+    <% end %>
+  </div>
 </nav>
