defined constant CATEGORIES for product and updated the form

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,7 +25,7 @@
 
   <div>
     <%= form.label :category %><br>
-    <%= form.select :category, ['public', 'private', 'archived'], selected: 'public' %>
+    <%= form.select :category, Product::CATEGORIES %>
   </div>
 
   <div>
