styled the product list

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,47 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.product-list {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(1,minmax(0,1fr));
+  gap: 16px;
+}
+
+.product {
+  background: white;
+  border-radius: 8px;
+  border: 1px solid #e5e7eb;
+  box-shadow: 0 5px 15px -10px rgba(31, 18, 53, 0.6);
+}
+
+.product-body {
+  padding: 20px;
+}
+
+.product-title {
+  display: flex;
+  align-items: center;
+}
+
+.product-comments {
+  font-size: 14px;
+  color: #6B7280;
+}
+
+.product-buttons {
+  border-top: 1px solid #e5e7eb;
+  padding: 10px 20px;
+  color: #4A5568;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width:640px) {
+  .product-list {
+    grid-template-columns: repeat(2,minmax(0,1fr));
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .product-list {
+    grid-template-columns: repeat(3,minmax(0,1fr));
+  }
+}
