--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,27 +1,26 @@
-<ul>
+<div class="product-list">
   <% products.each do |product| %>
-    <li>
-      <div>
-        <%= product.name %>
-      </div>
-      <div>
-        <%= product.url %>
-      </div>
-      <div>
-        <%= product.comments %>
-      </div>
-      <div>
-        <%= product.category %>
-      </div>
-      <div>
-        <%= link_to "Edit", edit_product_path(product) %>
+    <div class='product'>
+      <div class='product-body'>
+        <div class='product-title'>
+          <a class='link-xl' href="<%= product.url %>" target='_blank' rel='noreferrer'><%= product.name %></a>
+          <span class='bubble'><%= product.category %></span>
+        </div>
+
+        <div class='product-comments'>
+          <%= product.comments %>
+        </div>
       </div>
 
-      <div>
+      <div class='product-buttons'>
+        <%= link_to "Edit", edit_product_path(product), class: 'button button-primary' %>
+
         <%= link_to 'Delete', product_path(product),
           method: :delete,
-          data: { confirm: "Are you sure?" } %>
+          data: { confirm: "Are you sure?" },
+          class: 'button' %>
+
       </div>
-    </li>
+    </div>
   <% end %>
-</ul>
+</div>
