formatted add new product

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<div class='page-container'>
 
-<%= render "form", product: @product %>
+<div>
+  <h1 class='section-title'>Add New Product</h1>
+
+  <%= render "form", product: @product %>
+</div>
