--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -141,7 +141,7 @@ h1, h2, h3 {
   font-size: 14px;
 }
 
-.form input, .form textarea {
+.form input:not([type='submit']) , .form textarea {
   display: block;
   margin-bottom: 15px;
   font-size: 16px;
