--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: product do |form| %>
-  <div>
+<%= form_with model: product, class: 'form' do |form| %>
+  <div class='form-group'>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
     <% product.errors.full_messages_for(:name).each do |message| %>
@@ -7,7 +7,7 @@
     <% end %>
   </div>
 
-  <div>
+  <div class='form-group'>
     <%= form.label :url %><br>
     <%= form.text_field :url %>
     <% product.errors.full_messages_for(:url).each do |message| %>
@@ -15,7 +15,7 @@
     <% end %>
   </div>
 
-  <div>
+  <div class='form-group'>
     <%= form.label :comments %><br>
     <%= form.text_field :comments %>
     <% product.errors.full_messages_for(:comments).each do |message| %>
@@ -23,12 +23,13 @@
     <% end %>
   </div>
 
-  <div>
+  <div class='form-group'>
     <%= form.label :category %><br>
     <%= form.select :category, Product::CATEGORIES %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class='form-actions'>
+    <%= link_to "Cancel", dashboard_path, class: 'button' %>
+    <%= form.submit "Save", class: 'button button-primary' %>
   </div>
 <% end %>
