formatted edit product page and fixed layout issue for the new product page

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Products#edit</h1>
-<p>Find me in app/views/products/edit.html.erb</p>
+<div class='page-container'>
+  <div>
+    <h1 class='section-title'>Edit Product</h1>
 
-<%= render "form", product: @product %>
+    <%= render "form", product: @product %>
+  </div>
+</div>
