--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <div class='page-container'>
+  <div>
+    <h1 class='section-title'>Add New Product</h1>
 
-<div>
-  <h1 class='section-title'>Add New Product</h1>
-
-  <%= render "form", product: @product %>
+    <%= render "form", product: @product %>
+  </div>
 </div>
