--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: group do |form| %>
-  <div>
+<%= form_with model: group, class: 'form' do |form| %>
+  <div class='form-group'>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
     <% group.errors.full_messages_for(:name).each do |message| %>
@@ -7,7 +7,12 @@
     <% end %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class='form-actions'>
+    <% if group.id %>
+      <%= link_to 'Cancel', group_path(group.id), class: 'button' %>
+    <% else %>
+      <%= link_to 'Cancel', dashboard_path, class: 'button' %>
+    <% end %>
+    <%= form.submit 'Save', class: 'button button-primary' %>
   </div>
 <% end %>
