--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Create Group</h1>
+<div class='page-container'>
+  <div>
+    <h1 class='section-title'>Create Group</h1>
+  </div>
 
-<%= render "form", group: @group %>
+  <%= render "form", group: @group %>
+</div>
