--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,17 @@
-<h1>Join Group</h1>
-
-<%= form_with model: current_user do |form| %>
+<div class='page-container'>
   <div>
-    <%= form.label :code %><br>
-    <%= form.text_field :code %>
+    <h1 class='section-title'>Join Group</h1>
   </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+  <%= form_with model: current_user, class: 'form' do |form| %>
+    <div class='form-group'>
+      <%= form.label :code %><br>
+      <%= form.text_field :code %>
+    </div>
+
+    <div class='form-buttons'>
+      <%= link_to 'Cancel', dashboard_path, class: 'button' %>
+      <%= form.submit 'Save', class: 'button button-primary' %>
+    </div>
+  <% end %>
+</div>
