--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,19 +1,48 @@
-<h1><%= current_user.group.name %></h1>
+<div class='page-container'>
 
-Invite Code: <%= current_user.group.code %>
+  <div class='page-header'>
+    <div class='page-section'>
+      <div class='page-title'>
+        <h1><%= current_user.group.name %></h1>
 
-<%= link_to "Edit", edit_group_path(current_user.group_id) %>
+        <div>
+          <%= link_to "Edit", edit_group_path(current_user.group_id), class: 'button button-primary' %>
+          <%= link_to 'Leave Group', user_path(current_user.id, user: { group_id: nil }),
+            method: :patch,
+            data: { confirm: "Are you sure?" },
+            class: 'button' %>
+        </div>
+      </div>
 
-<%= link_to 'Leave Group', user_path(current_user.id, user: { group_id: nil }),
-  method: :patch,
-  data: { confirm: "Are you sure?" } %>
+      <div class='current-group'>
+        <div class='current-group-label'>
+          Invite code:
+        </div>
 
-<h2>Group Members</h2>
+        <div class='bubble'><%= current_user.group.code %></div>
+      </div>
+    </div>
+  </div>
 
-<ul>
-  <% @group.users.each do |user| %>
-    <li>
-      <%= link_to user.full_name, user_path(user.id) %>
-    </li>
-  <% end %>
-</ul>
+  <div>
+    <div class='page-section'>
+      <div class='page-subtitle'>
+        <h2>Group Members</h2>
+      </div>
+
+      <div class='user-boxes'>
+        <% @group.users.each do |user| %>
+          <div class='user-box'>
+            <div class='user-box-initials'>
+              <%= user.first_name[0] + user.last_name[0] %>
+            </div>
+
+            <div class='user-box-details'>
+              <%= link_to user.full_name, user_path(user.id), class: 'link' %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
