--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,19 @@
-<h1>
-  <%= @user.full_name %>
-</h1>
+<div class='page-container'>
+  <div class='page-header'>
+    <div class='page-section'>
+      <div class='page-title'>
+        <h1><%= @user.full_name %></h1>
+      </div>
+    </div>
+  </div>
 
-<h2>
-  Home Recommendations
-</h2>
+  <div>
+    <div class='page-section'>
+      <div class='page-subtitle'>
+        <h2>Home Recommendations</h2>
+      </div>
 
-<%= render partial: "products/products", locals: { products: @user.products } %>
+      <%= render partial: "products/products", locals: { products: @user.products } %>
+    </div>
+  </div>
+</div>
