--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -12,15 +12,17 @@
         </div>
       </div>
 
-      <div class='product-buttons'>
-        <%= link_to "Edit", edit_product_path(product), class: 'button button-primary' %>
+      <% if current_user == product.user %>
+        <div class='product-buttons'>
+          <%= link_to "Edit", edit_product_path(product), class: 'button button-primary' %>
 
-        <%= link_to 'Delete', product_path(product),
-          method: :delete,
-          data: { confirm: "Are you sure?" },
-          class: 'button' %>
+          <%= link_to 'Delete', product_path(product),
+            method: :delete,
+            data: { confirm: "Are you sure?" },
+            class: 'button' %>
 
-      </div>
+        </div>
+      <% end %>
     </div>
   <% end %>
 </div>
