--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,10 @@
 <%= form_with model: product, class: 'form' do |form| %>
   <div class='form-group'>
+    <%= form.label :category %><br>
+    <%= form.select :category, Product::CATEGORIES, :include_blank => "Select" %>
+  </div>
+
+  <div class='form-group'>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
     <% product.errors.full_messages_for(:name).each do |message| %>
@@ -17,15 +22,10 @@
 
   <div class='form-group'>
     <%= form.label :comments %><br>
-    <%= form.text_field :comments %>
+    <%= form.text_area :comments %>
     <% product.errors.full_messages_for(:comments).each do |message| %>
       <div><%= message %></div>
     <% end %>
-  </div>
-
-  <div class='form-group'>
-    <%= form.label :category %><br>
-    <%= form.select :category, Product::CATEGORIES %>
   </div>
 
   <div class='form-actions'>
